--- a/index.html
+++ b/index.html
@@ -5,9 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/global.scss">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
-    
+    <section class="mainc-section">
+        <header>
+            <nav>
+                <ul class="nav-bar">
+                    <li><a href="#">Works</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="s-1">
+            <div class="s1-div">
+                <h1>
+                    Hi, I am John,
+                    Creative Technologist
+                </h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                     Velit officia consequat duis enim velit mollit. Exercitation veniam 
+                     consequat sunt nostrud amet.</p>
+                <button>Download Resume</button>
+            </div>
+            <div class="back-img">
+            </div>
+        </section>
+        <section class="s-2">
+            <div class="div-p">
+                <p class="div-p-1"> Recent posts</p>
+                <p class="div-p-2"> View all</p>
+            </div>
+            <div class="s-2-div">
+                <div>
+                    <h2>Making a design system from scratch</h2>
+
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                         amet sint. Velit officia consequat duis enim velit mollit.
+                         Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </div>
+                <div>
+                    <h2>Creating pixel perfect icons in Figma</h2>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor 
+                        do amet sint. Velit officia consequat duis enim velit mollit.
+                         Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </section>
+
+
 </body>
 </html>
