--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -40,17 +40,28 @@
                 <p class="div-p-2"> View all</p>
             </div>
             <div class="s-2-div">
-                <div>
+                <div class="s-2-div1">
                     <h2>Making a design system from scratch</h2>
-
+                    <div class="s-2-div2" >
+                        <p>12 Feb 2020</p>
+                        <div class="div-stick">
+                        </div>
+                        <p>Design, Pattern</p>
+                    </div>
                     <p>
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                          amet sint. Velit officia consequat duis enim velit mollit.
                          Exercitation veniam consequat sunt nostrud amet.
                     </p>
                 </div>
-                <div>
+                <div class="s-2-div1">
                     <h2>Creating pixel perfect icons in Figma</h2>
+                    <div class="s-2-div2" >
+                        <p>12 Feb 2020</p>
+                        <div class="div-stick">
+                        </div>
+                        <p>Design, Pattern</p>
+                    </div>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor 
                         do amet sint. Velit officia consequat duis enim velit mollit.
                          Exercitation veniam consequat sunt nostrud amet.
@@ -58,8 +69,66 @@
                 </div>
             </div>
         </section>
+        <section class="s-3">
+            <h4>Featured works</h4>
+            <div class="s-3-div1">
+                <div class="img-div"> 
+                    <img src="./imige/desinge.png" alt="imige">
+                </div> 
+                <div>   
+                    <h3>Designing Dashboards</h3>
+                    <div class="s-3-div1-middle">
+                        <p class="div-2020">2020</p>
+                        <p class="Dashboard">Dashboard</p>
+                    </div>    
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    Velit officia consequat duis enim velit mollit.
+                     Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>     
+            </div>
+            <div class="s-3-div1">
+                <div class="img-div"> 
+                    <img src="./imige/vibrant.png" alt="imige">
+                </div> 
+                <div>   
+                    <h3>Vibrant Portraits of 2020</h3>
+                    <div class="s-3-div1-middle">
+                        <p class="div-2020">2018</p>
+                        <p class="Dashboard">Illustration</p>
+                    </div>    
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    Velit officia consequat duis enim velit mollit.
+                     Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>     
+            </div>
+            <div class="s-3-div1">
+                <div class="img-div"> 
+                    <img src="./imige/36days.png" alt="imige">
+                </div> 
+                <div>   
+                    <h3>36 Days of Malayalam type</h3>
+                    <div class="s-3-div1-middle">
+                        <p class="div-2020">2018</p>
+                        <p class="Dashboard">Typography</p>
+                    </div>    
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    Velit officia consequat duis enim velit mollit.
+                     Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>     
+            </div>
+
+           
+
+        </section>
+        <footer>
+            <div class="div-footer">
+                <img src="./imige/fb.png" alt="logo">
+                <img src="./imige/insta.png" alt="logo">
+                <img src="./imige/Vector.png" alt="logo">
+                <img src="./imige/Linkedin.png" alt="logo">
+            </div>
+            <p class="footer-p">Copyright ©2020 All rights reserved </p>
+        </footer>
     </section>
-
-
 </body>
 </html>
