--- a/works.html
+++ b/works.html
@@ -15,62 +15,13 @@
         <header>
             <nav>
                 <ul class="nav-bar">
-                    <li><a class="active" href="./index.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./works.html">Works</a></li>
+                    <li><a class="active" href="./works.html">Works</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <section class="s-1">
-            <div class="s1-div">
-                <h1>
-                    Hi, I am John,
-                    Creative Technologist
-                </h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                     Velit officia consequat duis enim velit mollit. Exercitation veniam 
-                     consequat sunt nostrud amet.</p>
-                <button>Download Resume</button>
-            </div>
-            <div class="back-img">
-            </div>
-        </section>
-        <section class="s-2">
-            <div class="div-p">
-                <p class="div-p-1"> Recent posts</p>
-                <p class="div-p-2"> View all</p>
-            </div>
-            <div class="s-2-div">
-                <div class="s-2-div1">
-                    <h2>Making a design system from scratch</h2>
-                    <div class="s-2-div2" >
-                        <p>12 Feb 2020</p>
-                        <div class="div-stick">
-                        </div>
-                        <p>Design, Pattern</p>
-                    </div>
-                    <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                         amet sint. Velit officia consequat duis enim velit mollit.
-                         Exercitation veniam consequat sunt nostrud amet.
-                    </p>
-                </div>
-                <div class="s-2-div1">
-                    <h2>Creating pixel perfect icons in Figma</h2>
-                    <div class="s-2-div2" >
-                        <p>12 Feb 2020</p>
-                        <div class="div-stick">
-                        </div>
-                        <p>Design, Pattern</p>
-                    </div>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor 
-                        do amet sint. Velit officia consequat duis enim velit mollit.
-                         Exercitation veniam consequat sunt nostrud amet.
-                    </p>
-                </div>
-            </div>
-        </section>
         <section class="s-3">
             <h4>Featured works</h4>
             <div class="s-3-div1">
@@ -112,6 +63,21 @@
                     <div class="s-3-div1-middle">
                         <p class="div-2020">2018</p>
                         <p class="Dashboard">Typography</p>
+                    </div>    
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    Velit officia consequat duis enim velit mollit.
+                     Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>     
+            </div>
+            <div class="s-3-div1">
+                <div class="img-div"> 
+                    <img src="./imige/components.png" alt="imige">
+                </div> 
+                <div>   
+                    <h3>Components</h3>
+                    <div class="s-3-div1-middle">
+                        <p class="div-2020">2018</p>
+                        <p class="Dashboard">Components, Design</p>
                     </div>    
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
                     Velit officia consequat duis enim velit mollit.
