--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,10 @@
         
         <footer>
             <div class="div-footer">
-                <img src="./imige/fb.png" alt="logo">
-                <img src="./imige/insta.png" alt="logo">
-                <img src="./imige/Vector.png" alt="logo">
-                <img src="./imige/Linkedin.png" alt="logo">
+                <a href="https:/fb.com"><img src="./imige/fb.png" alt="logo"></a>
+                <a href="https:/instagram.com"><img src="./imige/insta.png" alt="logo"></a>
+                <a href="https:/twitter.com"><img src="./imige/Vector.png" alt="logo"></a>
+                <a href="https:/google.com"><img src="./imige/Linkedin.png" alt="logo"></a>
             </div>
             <p class="footer-p">Copyright ©2020 All rights reserved </p>
         </footer>
