--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </section>
         <section class="s-2">
             <div class="div-p">
-                <p class="div-p-1"> Recent posts</p>
-                <p class="div-p-2"> View all</p>
+                <p class="div-p-1"><a href="./blog.html">Recent posts</a> </p>
+                <p class="div-p-2"><a href="./works.html">View all</a> </p>
             </div>
             <div class="s-2-div">
                 <div class="s-2-div1">
@@ -118,16 +118,13 @@
                      Exercitation veniam consequat sunt nostrud amet.</p>
                 </div>     
             </div>
-
-           
-
         </section>
         <footer>
             <div class="div-footer">
-                <img src="./imige/fb.png" alt="logo">
-                <img src="./imige/insta.png" alt="logo">
-                <img src="./imige/Vector.png" alt="logo">
-                <img src="./imige/Linkedin.png" alt="logo">
+                <a href="https:/fb.com"><img src="./imige/fb.png" alt="logo"></a>
+                <a href="https:/instagram.com"><img src="./imige/insta.png" alt="logo"></a>
+                <a href="https:/twitter.com"><img src="./imige/Vector.png" alt="logo"></a>
+                <a href="https:/google.com"><img src="./imige/Linkedin.png" alt="logo"></a>
             </div>
             <p class="footer-p">Copyright ©2020 All rights reserved </p>
         </footer>
