--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                      consequat sunt nostrud amet.</p>
                 <button>Download Resume</button>
             </div>
-            <div class="back-img">
+            <div class="imigtag">
+                <img src="./imige/Ellipse 1.png" alt="logo">
             </div>
         </section>
         <section class="s-2">
@@ -121,7 +122,7 @@
         </section>
         <footer>
             <div class="div-footer">
-                <a href="https://fb.com"><img src="./imige/fb.png" alt="logo"></a>
+                <a href="https://fb.com" target="_blank"><img src="./imige/fb.png" alt="logo"></a>
                 <a href="https://instagram.com" target="_blank"><img src="./imige/insta.png" alt="logo"></a>
                 <a href="https://twitter.com" target="_blank"><img src="./imige/Vector.png" alt="logo"></a>
                 <a href="https://google.com" target="_blank"><img src="./imige/Linkedin.png" alt="logo"></a>
