--- a/works.html
+++ b/works.html
@@ -90,10 +90,10 @@
         </section>
         <footer>
             <div class="div-footer">
-                <a href="https:/fb.com"><img src="./imige/fb.png" alt="logo"></a>
-                <a href="https:/instagram.com"><img src="./imige/insta.png" alt="logo"></a>
-                <a href="https:/twitter.com"><img src="./imige/Vector.png" alt="logo"></a>
-                <a href="https:/google.com"><img src="./imige/Linkedin.png" alt="logo"></a>
+                <a href="https://fb.com" target="_blank"><img src="./imige/fb.png" alt="logo"></a>
+                <a href="https://instagram.com" target="_blank"><img src="./imige/insta.png" alt="logo"></a>
+                <a href="https://twitter.com" target="_blank"><img src="./imige/Vector.png" alt="logo"></a>
+                <a href="https://google.com" target="_blank"><img src="./imige/Linkedin.png" alt="logo"></a>
             </div>
             <p class="footer-p">Copyright ©2020 All rights reserved </p>
         </footer>
